--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ torchvision = "^0.21.0"
 hydra-core = "^1.3.2"
 typer = "^0.15.1"
 wandb = "^0.19.6"
+tqdm = "^4.67.1"
+pandas = "^2.2.3"
 
 [tool.poetry.group.test]
 optional = true
