--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,6 +3,7 @@ repos:
     rev: v5.0.0
     hooks:
       - id: check-added-large-files
+        args: ['--maxkb=1300']
       - id: check-symlinks
       - id: destroyed-symlinks
       - id: trailing-whitespace
@@ -19,17 +20,17 @@ repos:
       - id: black
         language_version: python3
   - repo: https://github.com/pycqa/isort
-    rev: 6.0.0
+    rev: 6.0.1
     hooks:
       - id: isort
         args: [ "--profile", "black", "--filter-files" ]
-  - repo: https://github.com/econchick/interrogate
-    rev: master
-    hooks:
-      - id: interrogate
-        args: [--quiet, --fail-under=70]
-        pass_filenames: false
+  # - repo: https://github.com/econchick/interrogate
+  #   rev: master
+  #   hooks:
+  #     - id: interrogate
+  #       args: [--quiet, --fail-under=70]
+  #       pass_filenames: false
   - repo: https://github.com/PyCQA/flake8
-    rev: main
+    rev: 7.2.0
     hooks:
       - id: flake8
