--- a/src/configs/train.yaml
+++ b/src/configs/train.yaml
@@ -1,12 +1,35 @@
 defaults:
+  - loss_function: loss_function
+  - datasets: celeba_hq
+  - dataloader: dataloader
+  - metrics: metrics
   - model: StarGAN
+  - optimizer: optimizers
+  - transforms: transforms
   - writer: wandb
+  - _self_
+
+img_size: 256
+num_domains: 3
+embedding_size: 64
+latent_code_size: 16
+betas:
+- 0.0
+- 0.99
+device: cuda
+balanced: true
+initial_decay: 0.4
+final_decay: 0.999
+ema_step: 100
 
 trainer:
-  seed: null #seed random generators
-  deterministic: False #use deterministic torch
-  device: auto #device type
-  log_step: 100 #steps between logging
+  seed: null
+  deterministic: false
+  device: ${device}
   save_dir: expiriments
-  run_id: null
-  override: False
+  override: false
+  n_epochs: 50
+  save_period: 5
+  resume_from: null
+  log_step: 500
+  discriminator_steps: 1
