--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 package-mode = false
 
 [tool.poetry.dependencies]
-python = ">=3.10"
+python = ">=3.11"
 torch = "^2.6.0"
 torchvision = "^0.21.0"
 hydra-core = "^1.3.2"
@@ -16,7 +16,15 @@ typer = "^0.15.1"
 wandb = "^0.19.6"
 tqdm = "^4.67.1"
 pandas = "^2.2.3"
-gdown = "^5.2.0"
+pre-commit = "^4.1.0"
+torchmetrics = {extras = ["image"], version = "^1.6.1"}
+numpy = "^2.2.3"
+onnxscript = "^0.2.0"
+ipython = "^9.1.0"
+ipykernel = "^6.29.5"
+datasets = "^3.5.0"
+matplotlib = "^3.10.1"
+black = "^25.1.0"
 
 [tool.poetry.group.test]
 optional = true
@@ -25,11 +33,7 @@ optional = true
 pytest = "^8.3.4"
 flake8 = "^7.1.1"
 ipykernel = "^6.29.5"
-pre-commit = "^4.1.0"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
-
-[project.urls]
-repository = "https://github.com/azrails/stargan"
