--- a/src/configs/writer/wandb.yaml
+++ b/src/configs/writer/wandb.yaml
@@ -1,8 +1,15 @@
 _target_: src.logger.WandBWriter
-project_name: "StarGAN-v2"
+project_name: "StarGAN-v2 AFHQ"
 entity: null
-run_name: "baseline"
+run_name: "ema relativistic afhq"
 mode: "online"
-loss_names: ["loss"] # which losses to log (useful for multi-loss tasks, s.a. GANs)
+loss_names: # which losses to log (useful for multi-loss tasks, s.a. GANs)
+  - "generator_loss"
+  - "discriminator_loss"
+  - "g_adversarial_loss"
+  - "g_style_reconstruction_loss"
+  - "g_style_diversityn_loss"
+  - "g_cycle_loss"
+  - "d_adversarial_loss"
 log_checkpoints: False # set to True if you want to log save_dir with checkpoints to W&B
 id_length: 8 # length of the run_id
